register hashing, routing standardization

--- a/YouthActionDotNet/appsettings.json
+++ b/YouthActionDotNet/appsettings.json
@@ -10,5 +10,11 @@
       "Microsoft.Hosting.Lifetime": "Information"
       }
     },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "scripts":{
+    "postinstall": "dotnet ef database update",
+    "start": "dotnet run",
+    "build": "dotnet build"
+  }
+  
 }
