--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
-YouthAction/node_modules/
-YouthAction/Client/node_modules/
+YouthActionDotNet/node_modules/
+YouthActionDotNet/ClientApp/node_modules/
+YouthActionDotNet/YouthAction.db
