rough pagination 20 item per page

--- a/YouthActionDotNet/appsettings.Development.json
+++ b/YouthActionDotNet/appsettings.Development.json
@@ -2,6 +2,7 @@
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=YouthAction.db"
   },
+  "AllowedHosts": "*",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
