--- a/YouthActionDotNet/appsettings.json
+++ b/YouthActionDotNet/appsettings.json
@@ -10,11 +10,6 @@
       "Microsoft.Hosting.Lifetime": "Information"
       }
     },
-  "AllowedHosts": "*",
-  "scripts":{
-    "postinstall": "dotnet ef database update",
-    "start": "dotnet run",
-    "build": "dotnet build"
-  }
+  "AllowedHosts": "*"
   
 }
