--- a/YouthActionDotNet/ClientApp/package.json
+++ b/YouthActionDotNet/ClientApp/package.json
@@ -7,12 +7,14 @@
     "bootstrap": "^4.1.3",
     "jquery": "^3.5.1",
     "merge": "^2.1.1",
+    "mime-types": "^2.1.35",
     "moment": "^2.29.4",
     "oidc-client": "^1.9.0",
     "qr-scanner": "^1.4.2",
     "react": "^18.2.0",
     "react-csv": "^2.2.2",
     "react-dom": "^18.1.0",
+    "react-file-icon": "^1.3.0",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^6.3.0",
     "reactstrap": "^9.1.5",
