--- a/YouthActionDotNet/ClientApp/package.json
+++ b/YouthActionDotNet/ClientApp/package.json
@@ -15,6 +15,7 @@
     "react-csv": "^2.2.2",
     "react-dom": "^18.1.0",
     "react-file-icon": "^1.3.0",
+    "react-qr-code": "^2.0.11",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^6.3.0",
     "reactstrap": "^9.1.5",
