--- a/YouthActionDotNet/ClientApp/package.json
+++ b/YouthActionDotNet/ClientApp/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "dependencies": {
     "@types/react": "^18.0.26",
-    "bootstrap": "^4.1.3",
+    "bootstrap": "^4.6.2",
     "chart.js": "^4.2.1",
     "jquery": "^3.5.1",
     "merge": "^2.1.1",
@@ -13,6 +13,7 @@
     "oidc-client": "^1.9.0",
     "qr-scanner": "^1.4.2",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.2",
     "react-chartjs-2": "^5.2.0",
     "react-csv": "^2.2.2",
     "react-dom": "^18.1.0",
