--- a/YouthActionDotNet/ClientApp/package.json
+++ b/YouthActionDotNet/ClientApp/package.json
@@ -22,6 +22,7 @@
     "react-qr-code": "^2.0.11",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^6.3.0",
+    "react-toastify": "^9.1.1",
     "reactstrap": "^9.1.5",
     "readable-stream": "^4.3.0",
     "resolve-url-loader": "^5.0.0",
